# netbox-plugin-catalog

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  catalog.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update-catalog.yml
netbox_catalog/: __init__.py  catalog.json  catalog_service.py  compatibility.py  filtersets.py  forms.py  installer.py  models.py  navigation.py  pypi_client.py  tables.py  urls.py  views.py
netbox_catalog/api/: serializers.py  urls.py  views.py
netbox_catalog/migrations/: 0001_initial.py  0002_installationlog_tags.py  __init__.py
netbox_catalog/templates/netbox_catalog/: _plugin_grid.html  catalog_list.html  installationlog.html  installationlog_list.html  plugin_detail.html  plugin_install.html  plugin_installed.html
netbox_catalog/templatetags/: catalog_tags.py
scripts/: update_catalog.py
